--- a/index.html
+++ b/index.html
@@ -1,20 +1,58 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>About Me</title>
+        <style>
+            #myself{
+                text-align: center;
+            }
+            .Name{
+                font-weight: bold;
+                font-size: larger;
+            }
+            .image{
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+                width: 10%
+            }
+            a:link {
+                color: green;
+                background-color: transparent;
+                text-decoration: none;
+            }
+            a:visited {
+                color: pink;
+                background-color: transparent;
+                text-decoration: none;
+            }
+            a:hover {
+                color: red;
+                background-color: transparent;
+                text-decoration: underline;
+            }
+            a:active {
+                color: yellow;
+                background-color: transparent;
+                text-decoration: underline;
+            }
+            
+            
+        </style>
     </head>
-    <body>
-        <div id="Name">
-            <p>My name is Janak Ruia.</p>
+    <body class="body">
+        <div id="myself">
+            <p>My name is <span class="Name">Janak Ruia</span>.</p>
         </div>
-        <img src="janak.jpg" alt='My photo ' width=10%>
+        <img src="janak.jpg" alt='My photo ' class="image">
         <h4><b>Education</b></h4>
         I attended Witty Internation School, in Mumbai. Then I moved up to Shri T.P. Bhatia College of Science, while preparing for Jee from Rao IIT.
         Finally, I ended up at IIT Bombay, Physics Dept. I am pursuing a 4 year BTech in Engineering Physics.
         <br>
         <h4><b>Hobbies</b></h4>
         Some of my hobbies include:
-        <ul>
+        <ul class="unordered_list">
             <li>Listening Music</li>
             <li>Playing Chess</li>
             <li>Studying Physics</li>
@@ -27,7 +65,7 @@
                 Ambitions
             </i>
         </h4>
-        I hope to become a Theoretical Physicist/ Astrophysicist (not sure which) and working on a revolutionary project. Also, I want to get good at playing guitar.
+        I hope to become a <a href="https://en.wikipedia.org/wiki/Theoretical_physics">Theoretical Physicist</a>/<a href="https://en.wikipedia.org/wiki/Astrophysics"> Astrophysicist</a> (not sure which) and working on a revolutionary project. Also, I want to get good at playing guitar.
 
     </body>
 </html>
