--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 display: block;
                 margin-left: auto;
                 margin-right: auto;
-                width: 10%
+                width: 20%
             }
             a:link {
                 color: green;
@@ -47,8 +47,9 @@
         </div>
         <img src="janak.jpg" alt='My photo ' class="image">
         <h4><b>Education</b></h4>
-        I attended Witty Internation School, in Mumbai. Then I moved up to Shri T.P. Bhatia College of Science, while preparing for Jee from Rao IIT.
-        Finally, I ended up at IIT Bombay, Physics Dept. I am pursuing a 4 year BTech in Engineering Physics.
+        I attended Witty Internation School, in Mumbai.
+        <br>Then I moved up to Shri T.P. Bhatia College of Science, while preparing for Jee from Rao IIT.
+        <br>Finally, I ended up at IIT Bombay, Physics Dept. I am pursuing a 4 year BTech in Engineering Physics.
         <br>
         <h4><b>Hobbies</b></h4>
         Some of my hobbies include:
@@ -65,7 +66,7 @@
                 Ambitions
             </i>
         </h4>
-        I hope to become a <a href="https://en.wikipedia.org/wiki/Theoretical_physics">Theoretical Physicist</a>/<a href="https://en.wikipedia.org/wiki/Astrophysics"> Astrophysicist</a> (not sure which) and working on a revolutionary project. Also, I want to get good at playing guitar.
+        I hope to become a <a href="https://en.wikipedia.org/wiki/Theoretical_physics">Theoretical Physicist</a>/<a href="https://en.wikipedia.org/wiki/Astrophysics"> Astrophysicist</a> (not sure which) and working on a revolutionary project.<br> Also, I want to get good at playing guitar.
 
     </body>
 </html>
