--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 text-decoration: none;
             }
             a:visited {
-                color: pink;
+                color: royalblue;
                 background-color: transparent;
                 text-decoration: none;
             }
